[gd_scene load_steps=11 format=3 uid="uid://bwy8qxanv076u"]

[ext_resource type="Script" path="res://work_(2).gd" id="1_a5kej"]
[ext_resource type="Texture2D" uid="uid://cf7enixisf8a5" path="res://background 2.jpg" id="2_ckkia"]
[ext_resource type="Texture2D" uid="uid://dlia2yv16o1f8" path="res://assets/coffee_cup.png" id="3_6tlem"]
[ext_resource type="Texture2D" uid="uid://c7v45wji36njd" path="res://brown.webp" id="3_lt8am"]
[ext_resource type="Texture2D" uid="uid://xgcwavswjihc" path="res://assets/gray_bg.png" id="3_w2ddf"]
[ext_resource type="Texture2D" uid="uid://didmnk1yvy662" path="res://assets/coffee_maker.png" id="4_hulst"]
[ext_resource type="Texture2D" uid="uid://mcrfrwiwwsgc" path="res://lid.jpg" id="6_cds06"]
[ext_resource type="Texture2D" uid="uid://b10hlks3nfgk8" path="res://lose.jpg" id="7_lqnpi"]
[ext_resource type="Texture2D" uid="uid://btyemlhblegh8" path="res://assets/order_incomplete.png" id="8_xi55f"]
[ext_resource type="Texture2D" uid="uid://cp1sl0ot4722j" path="res://line.png" id="9_5agyt"]

[node name="work" type="Node2D"]
script = ExtResource("1_a5kej")

[node name="Background2" type="Sprite2D" parent="."]
visible = false
position = Vector2(288, 324)
scale = Vector2(0.533333, 0.9)
texture = ExtResource("2_ckkia")

[node name="GrayBg" type="Sprite2D" parent="."]
position = Vector2(288, 324.841)
scale = Vector2(0.576, 0.648318)
texture = ExtResource("3_w2ddf")

[node name="Coffee" type="Sprite2D" parent="."]
position = Vector2(279, 478)
scale = Vector2(0.259005, 0.259005)
texture = ExtResource("3_6tlem")

[node name="CoffeeMachine" type="Sprite2D" parent="."]
position = Vector2(274, 215)
scale = Vector2(0.271845, 0.271845)
texture = ExtResource("4_hulst")

[node name="Button" type="Button" parent="CoffeeMachine"]
modulate = Color(1, 1, 1, 0)
offset_left = -294.0
offset_top = -430.0
offset_right = 316.0
offset_bottom = 412.0
theme_override_font_sizes/font_size = 96
text = "button"

[node name="Brown" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(432, 592)
scale = Vector2(0.0606369, 0.0606369)
texture = ExtResource("3_lt8am")

[node name="Brown2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(432, 528)
scale = Vector2(0.0606369, 0.0606369)
texture = ExtResource("3_lt8am")

[node name="Brown3" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(432, 464)
scale = Vector2(0.0606369, 0.0606369)
texture = ExtResource("3_lt8am")

[node name="Brown4" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(432, 400)
scale = Vector2(0.0606369, 0.0606369)
texture = ExtResource("3_lt8am")

[node name="Lid" type="Sprite2D" parent="."]
position = Vector2(451, 233)
scale = Vector2(0.146037, 0.146037)
texture = ExtResource("6_cds06")

[node name="done" type="Button" parent="."]
offset_left = 385.0
offset_top = 186.0
offset_right = 516.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 41
text = "done"

[node name="Lose" type="Sprite2D" parent="."]
visible = false
position = Vector2(287, 324)
scale = Vector2(1.07662, 1.72222)
texture = ExtResource("7_lqnpi")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(88, 150)
scale = Vector2(0.2225, 0.245921)
texture = ExtResource("8_xi55f")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(88, 275)
scale = Vector2(0.2225, 0.245921)
texture = ExtResource("8_xi55f")

[node name="Icon3" type="Sprite2D" parent="."]
position = Vector2(88, 400)
scale = Vector2(0.2225, 0.245921)
texture = ExtResource("8_xi55f")

[node name="Line" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(440, 361)
scale = Vector2(0.0882625, 0.0882625)
texture = ExtResource("9_5agyt")

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 484.0
offset_top = 347.0
offset_right = 551.0
offset_bottom = 383.0
theme_override_font_sizes/font_size = 16
text = "fill line"

[connection signal="pressed" from="CoffeeMachine/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="done" to="." method="_on_done_pressed"]
